--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('background.jpg'); /* Replace 'background.jpg' with your parents' photo */
+  background-image: url('https://github.com/DamanAhuja/Invite/assets/142963733/a01543d4-c770-4774-9fb1-bd5b52f20264'); /* Replace 'background.jpg' with your parents' photo */
   background-size: cover;
   filter: blur(10px);
   z-index: -1;
