--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('https://github.com/DamanAhuja/Invite/assets/142963733/a01543d4-c770-4774-9fb1-bd5b52f20264'); /* Replace 'background.jpg' with your parents' photo */
+  background-image: url('https://github.com/DamanAhuja/Invite/assets/142963733/a01543d4-c770-4774-9fb1-bd5b52f20264');
   background-size: cover;
   filter: blur(5px);
   z-index: -1;
@@ -79,7 +79,6 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  white-space: nowrap;
   animation: scroll 20s linear infinite;
 }
 
